Added useEffect to change forecast data when a different city is entered

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <title>React Weather App</title>
+    <title>Judith's React Weather App</title>
   </head>
   <body>
     <div id="root"></div>
